<resources>
    <string name="app_name">DONGZHOU</string>

    <!--  底部边栏   -->
    <string name="bottom_bar_scan">Scan</string>
    <string name="bottom_bar_history">History</string>
    <string name="bottom_bar_create">Create</string>
    <string name="bottom_bar_setting">Setting</string>

    <!--    创建-->
    <string name="website">Website</string>
    <string name="wifi">WIFI</string>
    <string name="text">Text</string>
    <string name="contact">Contact</string>
    <string name="tel">Tel</string>
    <string name="email">E-mail</string>
    <string name="sms">SMS</string>
    <string name="calendar">Calendar</string>
    <string name="mycard">My Card</string>

    <!--    创建facebook Activity-->
    <string name="ca_create">Create</string>
    <string name="facebook_input_hint">Enter Facebook ID</string>
    <string name="ca_open">OPEN</string>

    <!--    创建website Activity-->
    <string name="website_input_hint">Enter URL</string>

    <!-- 扫描页 -->
    <string name="scan_action_gallery">相册</string>
    <string name="scan_action_flashlight">手电筒</string>
    <string name="scan_action_batch">批量</string>
    <string name="scan_zoom_reduce">缩小</string>
    <string name="scan_zoom_add">放大</string>

</resources>