<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_create_activity"

    tools:context=".Activities.CreateActivities.FaceBookCreateActivity">


    <LinearLayout
        android:id="@+id/layoutNavBar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:gravity="center"
            app:srcCompat="@mipmap/ic_results_page_return"
            android:textColor="#222222"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="Facebook"
            android:textColor="#111111"
            android:textSize="18sp"
            android:textStyle="bold"/>


    </LinearLayout>
<!--    <include-->
<!--        android:id="@+id/navBar"-->
<!--        layout="@layout/ca_navbar"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_width="match_parent"/>-->

    <LinearLayout
        android:id="@+id/layoutCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/layoutNavBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="28dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/viewImagePlaceholder"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@mipmap/ic_facebook"/>


        <TextView
            android:id="@+id/tvOpenTag"
            android:layout_width="60dp"
            android:layout_height="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/ca_open"
            android:textColor="#1877F2"
            android:textSize="12sp"
            android:textStyle="bold"
            android:background="@drawable/bg_open_tag"/>

        <!-- 加灰色边框 -->
        <LinearLayout
            android:id="@+id/layoutTabs"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTabFacebookId"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Facebook ID"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/bg_tab_selected"/>

            <TextView
                android:id="@+id/tvTabUrl"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="URL"
                android:textColor="#666666"
                android:textSize="16sp" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_input"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="22dp"
        app:layout_constraintTop_toBottomOf="@+id/layoutCard">


        <EditText
            android:id="@+id/etFacebookId"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/facebook_input_hint"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="#222222"
            android:textColorHint="#999999"
            android:textSize="14sp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreate"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="236dp"
        android:background="@drawable/bg_create_button"
        android:text="@string/ca_create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutInput" />

</androidx.constraintlayout.widget.ConstraintLayout>